@@ -1,20 +1,25 @@
-.TH FAPOLICYD.RULES: "7" "July 2019" "Red Hat" "System Administration Utilities"
+.TH FAPOLICYD.RULES: "7" "Nov 2019" "Red Hat" "System Administration Utilities"
 .SH NAME
 fapolicyd.rules \- fapolicyd rules to determine access rights
 .SH DESCRIPTION
 \fBfapolicyd.rules\fP is a file that contains the rules that \fBfapolicyd\fP uses to make decisions about access rights. The rules follow a simple format of:
 
 .nf
-.B decision subject object
+.B decision perm subject : object
 .fi
 
 They are evaluated from top to bottom with the first rule to match being used
-for the access control decision.
+for the access control decision. The colon is mandatory to separate subject and object since they share keywords.
 
 .SS Decision
 The decision is either
 .IR allow ", " deny ", " allow_audit ", or " deny_audit ".
 If the rule triggers, this is the access decision that fapolicyd will tell the kernel. If the decision is one of the audit variety, then the decision will trigger a FANOTIFY audit event with all relevant information.
+
+.SS Perm
+Perm describes what kind permission is being asked for. The permission is either
+.IR open " or "execute " or "any".
+If none is given, the open is assumed.
 
 .SS Subject
 The subject is the process that is performing actions on system resources. The fields in the rule that describe the subject are written in a name=value format.i There can be one or more subject fields. Each field is and'ed with others to decide if a rule triggers. The name can be any of the following:
@@ -36,13 +41,16 @@ This is the numeric session id that the audit system assigns to users when they 
 .B pid
 This is the numeric process id that a program has.
 .TP
+.B trust
+This is a boolean describing whether it is required for the subject to be in the trust database or not. A value of 1 means its required while 0 means its not.
+.TP
 .B comm
 This is the shortened command name. When an interpreter starts a program, it usually renames the program to the script rather than the interpreter.
 .TP
 .B exe
 This is the full path to the executable. Globbing is not supported. You may also use the special keyword \fBuntrusted\fP to match on the subject not being listed in the rpm database.
 .TP
-.B exe_dir
+.B dir
 If you wish to match a directory, then use this by giving the full path to the directory. Its recommended to end with the / to ensure it matches a directory. There are 3 keywords that \fIexe_dir\fP supports: \fBexecdirs\fP, \fBsystemdirs\fP, \fBuntrusted\fP.
 .RS
 .TP 12
@@ -62,10 +70,12 @@ The \fIexecdirs\fP option will match against the following list of directories:
 The \fIexecdirs\fP option will match against the same list as \fIexecdirs\fP but also includes /etc/.
 .TP 12
 .B untrusted
-The \fIuntrusted\fP option will look up the current executable's full path in the rpm database to see if the executable is known to the system. The rule will trigger if the file in question is not packaged.
+The \fIuntrusted\fP option will look up the current executable's full path in the rpm database to see if the executable is known to the system. The rule will trigger if the file in question is not in the trust database. This option is
+.B deprecated
+in favor of using obj_trust with execute permission when writing rules.
 .RE
 .TP
-.B exe_type
+.B ftype
 This option takes the mime type of a file as an argument. If you wish to check the mime type of a file while writing rules, run the following command:
 
 .nf
@@ -73,7 +83,7 @@ This option takes the mime type of a file as an argument. If you wish to check t
 .fi
 
 .TP
-.B exe_device
+.B device
 This option will match against the device that the executable resides on. To use it, start with /dev/ and add the target device name.
 
 .TP
@@ -118,18 +128,30 @@ This option will match against the device that the file being accessed resides o
 .B ftype
 This option matches against the mime type of the file being accessed. See \fBexe_type\fP for more information on determining the mime type.
 .TP
+.B trust
+This is a boolean describing whether it is required for the object to be in the trust database or not. A value of 1 means its required while 0 means its not.
+.TP
 .B sha256hash
 This option matches against the sha256 hash of the file being accessed. The hash in the rules should be all lowercase letters and do NOT start with 0x. Lowercase is the default output of sha256sum.
 .RE
+
+.SH NOTES
+When you are writing a rule for the execute permission, remember that the file to be executed is an object. Unless you are blocking execution from a specific program, then you would normally use
+.I all
+for the subject side.
+
+If you are writing rules that use patterns, just select
+.I any
+as the permission to be clear that this applies to anything. In reality, pattern matching ignores the permission but the suggestion is for documentation purposes.
 
 .SH EXAMPLES
 The following rules show how rules may look.
 
 .nf
-.B deny_audit exe=/usr/bin/wget dir=/tmp
-.B allow exe=/usr/bin/python3.4 dir=execdirs ftype=text/x-python
-.B deny_audit pattern ld_so all
-.B deny all all
+.B deny_audit perm=open exe=/usr/bin/wget : dir=/tmp
+.B allow perm=open exe=/usr/bin/python3.7 : ftype=text/x-python trust=1
+.B deny_audit perm=any pattern ld_so : all
+.B deny perm=any all : all
 .fi
 
 .SH "SEE ALSO"
