@@ -1,50 +1,43 @@
 # This is some sample rules that demonstrate some of the capabilities
-# of the fapolicyd. This is written as a blacklist. If you wanted a
-# whitelist, then you would end with deny_audit all all. But be very careful
-# with that and run in permissive for a while to confirm. Also, the
-# versions of python and the update utilities may need adjusting for
-# your distribution.
+# of the fapolicyd. The way that it works is that for each kind of
+# executable you may have, you carve out what is acceptable (the whitelist)
+# and then deny anything else of that type. The rules end with an allow
+# anything to prevent unintended blockage to things like media files, documents,
+# or anything else applications access that is not a computer langauge.
 
 # Carve out an exception for dracut
-allow uid=0 dir=/var/tmp/
-allow uid=0 exe=%ld_so_path% dir=systemdir
+allow perm=any uid=0 : dir=/var/tmp/
+allow perm=any uid=0 trust=1 : all
 
 # Prevent execution by ld.so
-deny_audit pattern=ld_so all
+deny_audit perm=any pattern=ld_so : all
 
 # We have to carve out an exception for the system updaters
 # or things go very bad (deadlock).
-allow exe=/usr/bin/rpm all
-allow exe=%python3_path% comm=dnf all
+allow perm=open exe=/usr/bin/rpm : all
+allow perm=open exe=%python3_path% comm=dnf : all
 
-# Don't allow untrusted executables
-deny_audit exe_dir=execdirs exe=untrusted all
+# Only allow known ELF libs - this is ahead of executable because typical
+# executable is linked with a dozen or more libraries.
+allow perm=open all : ftype=application/x-sharedlib trust=1
+deny_audit perm=open all : ftype=application/x-sharedlib
 
-# Only allow system ELF Applications - note: depends on above check
-# for untrusted executables.
-allow all dir=execdirs ftype=application/x-executable
-deny_audit all ftype=application/x-executable
-
-# If you have a LD_LIBRARY_PATH, you may need to allow those here
-# allow all dir=/usr/local/cuda/lib64 ftype=application/x-sharedlib
-
-# Only allow system ELF libs
-allow all dir=execdirs ftype=application/x-sharedlib
-deny_audit all ftype=application/x-sharedlib
+# Only allow known ELF Applications
+allow perm=execute all : ftype=application/x-executable trust=1
+deny_audit perm=execute all : ftype=application/x-executable
 
 # Need to carve out an exception for ansible
-allow uid=0 dir=/tmp/ansible
-allow uid=0 dir=/root/.ansible/tmp/
+allow perm=any uid=0 : dir=/tmp/ansible
+allow perm=any uid=0 : dir=/root/.ansible/tmp/
 
 # Only allow system python executables and libs
 # File type by: file --mime-type /path-to-file
-allow all dir=execdirs ftype=text/x-python
-allow exe=%python3_path% dir=execdirs ftype=text/x-python
-allow exe=%python3_path% dir=execdirs ftype=application/octet-stream
-allow exe=%python2_path% dir=execdirs ftype=text/x-python
-allow exe=%python2_path% dir=execdirs ftype=application/octet-stream
-deny_audit  all ftype=text/x-python
-#deny_audit all ftype=application/octet-stream path=*.pyc
+allow perm=open all : ftype=text/x-python trust=1
+allow perm=execute all : ftype=text/x-python trust=1
+allow perm=open exe=%python3_path% : ftype=application/octet-stream trust=1
+allow exe=%python2_path% : ftype=application/octet-stream trust=1
+deny_audit perm=any all : ftype=text/x-python
+#deny_audit perm=any all : ftype=application/octet-stream path=*.pyc
 
 #
 # In this next optional languages section, choose either to
@@ -53,31 +46,40 @@ deny_audit  all ftype=text/x-python
 #
 
 # Block all perl
-deny_audit exe=/usr/bin/perl all
+deny_audit perm=open exe=/usr/bin/perl : all
 
 # Perl
-#allow all dir=execdirs ftype=text/x-perl
-#deny_audit all ftype=text/x-perl
+#allow perm=open all : ftype=text/x-perl trust=1
+#deny_audit perm=any all : ftype=text/x-perl
 
 # Block all PHP
-deny_audit exe=/usr/bin/php all
+deny_audit perm=any exe=/usr/bin/php : all
 
 # PHP
-#allow all dir=execdirs ftype=text/x-php
-#deny_audit all ftype=text/x-php
+#allow perm=open all : ftype=text/x-php trust=1
+#deny_audit perm=any all : ftype=text/x-php
 
 # Block all Ruby
-deny_audit exe=/usr/bin/ruby all
+deny_audit perm=any exe=/usr/bin/ruby : all
 
 # Ruby
-#allow all dir=execdirs ftype=text/x-ruby
-#deny_audit  all ftype=text/x-ruby
+#allow perm=open all : ftype=text/x-ruby trust=1
+#deny_audit perm=any all : ftype=text/x-ruby
+
+# Allow shell script but block all other languages
+allow perm=execute all : ftype=text/x-shellscript trust=1
+allow perm=execute all : ftype=text/plain trust=1
+
+# This is a workaround for kernel thinking this is being executed. We
+# catch actual execution in rule 3.
+allow perm=execute all : path=%ldso_path% trust=1
+deny_audit perm=execute all : ftype=any
 
 # Data exfiltration
-#deny_audit exe=/usr/bin/ssh dir=/opt
-#deny_audit exe=/usr/bin/wget dir=/tmp
-#deny_audit all device=/dev/cdrom
+#deny_audit perm=open exe=/usr/bin/ssh : dir=/opt
+#deny_audit perm=open exe=/usr/bin/wget : dir=/tmp
+#deny_audit perm=any all : device=/dev/cdrom
 
-# Allow everything else
-allow all all
+# Allow everything else - access to media files, documents, etc
+allow perm=open all : all
 
